# picnic-api

./: .gitignore  credentials.json.example  pyproject.toml
picnic_price/: cli.py  picnic.py  schema.py  utils.py
secrets/: credentials.example.json
tests/: test_picnic_price.py  test_utils.py
